ukui-system-monitor (2.0.2-11) v101; urgency=medium

  * 修复bug：1、系统字体调16时大部分文本显示不全#42396/#42379
  * 2、进程cpu占比与top信息相差较大#42394

 -- Yang Min <yangmin@kylinos.cn>  Sat, 13 Mar 2021 10:34:02 +0800

ukui-system-monitor (2.0.2-10) v101; urgency=medium

  * 优化功能：1、进程列表信息增加锁保护；2、进程列表的icon对象放到ui线程中处理
  * 修复bug：修复关于界面邮箱链接不可点击问题

 -- Yang Min <yangmin@kylinos.cn>  Sat, 06 Mar 2021 16:48:06 +0800

ukui-system-monitor (2.0.2-9) v101; urgency=medium

  * 优化功能：优化进程列表显示
  * 修复bug：1、修复搜索输入框偶现不显示内容问题；2、修复触摸屏无法触摸点击问题

 -- Yang Min <yangmin@kylinos.cn>  Tue, 03 Mar 2021 17:44:18 +0800

ukui-system-monitor (2.0.2-7) v101; urgency=medium

  * 优化功能：统一内存单位显示

 -- Yang Min <yangmin@kylinos.cn>  Sun, 21 Feb 2021 16:39:47 +0800

ukui-system-monitor (2.0.2-6) v101; urgency=medium

  * 修复bug，系统监视器无法在触摸屏上手动拖动。

 -- renxinyu <renxinyu@kylinos.cn>  Fri, 19 Feb 2021 09:46:38 +0800

ukui-system-monitor (1.0.0-1) unstable; urgency=medium

  * Initial release. (Closes: #966527)

 -- handsome_feng <jianfengli@ubuntukylin.com>  Fri, 17 Apr 2020 10:26:07 +0800